# LanMei

./: .dockerignore  .gitignore  Base.Dockerfile  Dockerfile  Makefile  README.md  bootstrap.sh  build-container.sh  build.sh  docker-compose.yaml  go.mod  go.sum  stop.sh
idl/: bot.thrift  rpc.thrift
server/common/: bot.go  command.go  req.go
server/rpc_gen/kitex_gen/bot/: bot.go  k-bot.go  k-consts.go
server/rpc_gen/kitex_gen/hitokoto/: k-consts.go  k-rpc.go  rpc.go
server/rpc_gen/kitex_gen/rpc/: k-rpc.go  rpc.go
server/rpc_gen/rpc/history/: history_client.go  history_default.go  history_init.go
server/rpc_gen/rpc/hitokoto/: hitokoto_client.go  hitokoto_default.go  (+1 more)
server/service/bot/: build.sh  main.go
server/service/code/: handler.go  main.go
server/service/cut/: build.sh  handler.go  main.go
server/service/gpt/: build.sh  handler.go  main.go
server/service/history/: build.sh  handler.go  kitex_info.yaml  main.go
server/service/hitokoto/: build.sh  handler.go  kitex_info.yaml  main.go
server/service/limiter/: handler.go  main.go
server/service/music/: handler.go  main.go
server/service/reply/: handler.go  main.go
server/service/sign/: handler.go  kitex_info.yaml  main.go
server/service/wordcloud/: .gitignore  Dockerfile  build.sh  handler.go  main.go
server/service/wordcloud/biz/lib/wcloud/: Cargo.toml  build.rs  cbindgen.toml  rustfmt.toml
server/service/wordcloud/biz/lib/wcloud/src/: lib.rs  pkg.rs
server/service/wordcloud/biz/lib/wcloud/src/pkg/cgo/: word.rs
server/service/wordcloud/biz/lib/wcloud/src/pkg/wcloud/: gen.rs
(+144 files in other folders)
